--- a/src/classes/WaveObject.cls
+++ b/src/classes/WaveObject.cls
@@ -1,24 +1,54 @@
-/**
-*	@description Custom class for describe object and create a record for unit test.
-*/
 public virtual class WaveObject {
 	private static Map<String, Schema.SObjectType> globalSObjectsMap = Schema.getGlobalDescribe();
+	private final Map<String, Object> defaultFieldValueMap = new Map<String, Object> {
+			'STRING' => 'Test' + Math.round(Math.random() * 100), 
+			'INTEGER' => 0, 
+			'DOUBLE' => 0.0, 
+			'BOOLEAN' => true, 
+			'CHECKBOX' => true, 
+			'DATE' => Date.today(), 
+			'DATETIME' => DateTime.now()
+	};
+	
 	public Map<String, sObject> sObjectMap;
 	public String objectName;
 	public sObject record;
 	
+	public WaveObject() {
+	}
+	
 	/**
 	*	@description Constructor with name of object. 
-	*			Create a record of this object with all require fields.
+	*	Create a record of this object with all require fields.
 	*
 	*	@param p_objectName is name of object.
 	*/
 	public WaveObject(String p_objectName) {
+		this(p_objectName, new Map<String, Object>());
+	}
+	
+	/**
+	*	@description Constructor with name of object. 
+	*	 Create a record of this object with all require fields.
+	*
+	*	@param p_sObjectType is name of object in SObjectType format.
+	*/
+	public WaveObject(Schema.SObjectType p_sObjectType) {
+		this(p_sObjectType.getDescribe().getName(), new Map<String, Object>());
+	}
+	
+	/**
+	*	@description Constructor with name of object. 
+	*	 Create a record of this object with all require fields.
+	*
+	*	@param p_sObjectType is name of object in SObjectType format.
+	*	@param p_fieldValues is map with field values.
+	*/
+	public WaveObject(String p_objectName, Map<String, Object> p_fieldValues) {
 		sObjectMap = new Map<String, sObject>();
 		objectName = p_objectName;
-		record = newsObject(p_objectName);
-		
-		
+		record = newSObject(p_objectName);
+	
 		for (Schema.SObjectField v_field : globalSObjectsMap.get(p_objectName)
 				.getDescribe().fields.getMap().values()) {
 			
@@ -26,91 +56,82 @@ public virtual class WaveObject {
 			Schema.DescribeFieldResult v_resultDescribe = v_field.getDescribe();
 			if ( ! v_resultDescribe.isNillable() && v_resultDescribe.isCreateable()) {
 				//Set default value
-				record.put(v_resultDescribe.getName(), v_resultDescribe.getDefaultValue());
+				if (v_resultDescribe.getName() == 'Status' && objectName == 'Contract') {
+					record.put(v_resultDescribe.getName(), 'Draft');
+				} else if (v_resultDescribe.getName() == 'isConverted' && objectName == 'Lead') {
+					record.put(v_resultDescribe.getName(), false);
+				} else if (String.valueOf(v_resultDescribe.getType()) == 'PICKLIST') {
+					for (Schema.PicklistEntry pEntry : v_resultDescribe.getPicklistValues()) {
+						if (pEntry.isActive()) {
+							record.put(v_resultDescribe.getName(), pEntry.getValue());
+							
+							break;
+						}
+					}
+				} else {
+					Object v_defaultFieldValue = defaultFieldValueMap.get(String.valueOf(v_resultDescribe.getType()));
+					record.put(v_resultDescribe.getName(), v_defaultFieldValue);
+				}
 			}
 			
 			//Create an all master-details fields
 			if ( ! v_resultDescribe.getReferenceTo().isEmpty() && v_resultDescribe.isCreateable() && 
 					! v_resultDescribe.isNillable()) {
-				
+			
 				for (Schema.SObjectType v_fieldType : v_resultDescribe.getReferenceTo()) {
-					if (v_fieldType.getDescribe().getName() != objectName && 
-						globalSObjectsMap.get(v_fieldType.getDescribe().getName()).getDescribe()
-								.isCreateable()) {
+					String v_objectReferenceName = v_fieldType.getDescribe().getName();
+					if (v_objectReferenceName == 'User') {
+						record.put(v_resultDescribe.getName(), UserInfo.getUserId());
 						
-						System.debug('-----' + v_fieldType.getDescribe().getName());
+						User v_currentUser = [
+								SELECT Name 
+								FROM User 
+								WHERE Id = :UserInfo.getUserId() 
+								LIMIT 1];
 						
-						WaveObject v_newObject = new WaveObject(v_fieldType.getDescribe().getName())
-								.insertRecord();
+						this.sObjectMap.put(UserInfo.getUserId(), v_currentUser);
+					} else if (v_objectReferenceName == 'Profile') {
+						record.put(v_resultDescribe.getName(), UserInfo.getProfileId());
 						
+						Profile v_currentProfile = [
+								SELECT Name 
+								FROM Profile 
+								WHERE Id = :UserInfo.getProfileId() 
+								LIMIT 1];
+						
+						this.sObjectMap.put(UserInfo.getProfileId(), v_currentProfile);
+					} else if (v_objectReferenceName == 'Group') {
+						List<Group> v_groups = [SELECT Id FROM Group LIMIT 1];
+						
+						if ( ! v_groups.isEmpty()) {
+							record.put(v_resultDescribe.getName(), v_groups.get(0).Id);
+							
+							this.sObjectMap.put(v_groups.get(0).Id, v_groups.get(0));
+						} else {
+							throw new UtilsException('Groups records are not consists in database.');
+						}
+					} else {
+						//Master-detail or require lookup
+						if (v_fieldType.getDescribe().getName() != objectName && 
+								globalSObjectsMap.get(v_fieldType.getDescribe().getName()).getDescribe()
+										.isCreateable()) {
+							
+							sObject v_newObject = new WaveObject(v_fieldType.getDescribe().getName())
+									.insertSObjectRecord();
+							
+							this.sObjectMap.put(v_newObject.Id, v_newObject);
+							
+							record.put(v_resultDescribe.getName(), v_newObject.Id);
+						}
 					}
 				}
 			}
+			
 		}
-	}
-	
-	public WaveObject(Schema.SObjectType p_sObjectType) {
-		sObjectMap = new Map<String, sObject>();
-		objectName = p_sObjectType.getDescribe().getName();
-		record = newsObject(objectName);
 		
-		
-		for (Schema.SObjectField v_field : globalSObjectsMap.get(objectName)
-				.getDescribe().fields.getMap().values()) {
-			
-			//Craete an all require fields
-			Schema.DescribeFieldResult v_resultDescribe = v_field.getDescribe();
-			if ( ! v_resultDescribe.isNillable()) {
-				//Set default value
-				record.put(v_resultDescribe.getName(), v_resultDescribe.getDefaultValue());
-			}
-			
-			//Create an all master-details fields
-			if ( ! v_resultDescribe.getReferenceTo().isEmpty() && v_resultDescribe.isCreateable() && 
-					! v_resultDescribe.isNillable()) {
-				
-				for (Schema.SObjectType v_fieldType : v_resultDescribe.getReferenceTo()) {
-					if (v_fieldType.getDescribe().getName() != objectName) {
-						WaveObject v_newObject = new WaveObject(v_fieldType.getDescribe().getName())
-								.getRecord();
-					}
-				}
-			}
-		}
-	}
-	
-	public WaveObject(String p_objectName, Map<String, Object> p_fieldValues) {
-		sObjectMap = new Map<String, sObject>();
-		objectName = p_objectName;
-		record = newsObject(p_objectName);
-		
-		
-		for (Schema.SObjectField v_field : globalSObjectsMap.get(p_objectName)
-				.getDescribe().fields.getMap().values()) {
-			
-			//Craete an all require fields
-			Schema.DescribeFieldResult v_resultDescribe = v_field.getDescribe();
-			if ( ! v_resultDescribe.isNillable()) {
-				//Set default value
-				record.put(v_resultDescribe.getName(), v_resultDescribe.getDefaultValue());
-			}
-			
-			//Create an all master-details fields
-			if ( ! v_resultDescribe.getReferenceTo().isEmpty() && v_resultDescribe.isCreateable() && 
-					! v_resultDescribe.isNillable()) {
-				
-				for (Schema.SObjectType v_fieldType : v_resultDescribe.getReferenceTo()) {
-					if (v_fieldType.getDescribe().getName() != objectName) {
-						WaveObject v_newObject = new WaveObject(v_fieldType.getDescribe().getName())
-								.getRecord();
-					}
-				}
-			}
-			
-			//reEnter fields from input map
-			for (String v_fieldName : p_fieldValues.keySet()) {
-				record.put(v_fieldName, p_fieldValues.get(v_fieldName));
-			}
+		//reEnter fields from input map
+		for (String v_fieldName : p_fieldValues.keySet()) {
+			record.put(v_fieldName, p_fieldValues.get(v_fieldName));
 		}
 	}
 	
@@ -124,13 +145,10 @@ public virtual class WaveObject {
 		Schema.SObjectType v_targetType = globalSObjectsMap.get(p_typeName);
 		if (v_targetType == null) {
 			// calling code should usually handle this exception:
-			throw new UtilsException('The requested SObject type [' + v_targetType + 
-					'] cannot be constructed; it is not configured on this org.');
+			throw new UtilsException('The requested SObject type [' + v_targetType + '] cannot be constructed;' + 
+					' it is not configured on this org.');
 		}
 		
-		// SObjects offer the only way in Apex to instantiate an object with a type determined at 
-		// runtime -- you can optionally pass an Id argument to instantiate an SObject for an 
-		// existing record:
 		return v_targetType.newSObject();
 	}
 	
@@ -141,7 +159,7 @@ public virtual class WaveObject {
 	*	@param p_value is a field value.
 	*	@return WaveObject is a current class.
 	*/
-	public virtual WaveObject addField(String p_name, Object p_value) {
+	public WaveObject addField(String p_name, Object p_value) {
 		//Enter object field from input parameters
 		record.put(p_name, p_value);
 		
@@ -154,7 +172,7 @@ public virtual class WaveObject {
 	*	@param p_fieldValues is a map that consists of field values.
 	*	@return WaveObject is a current class.
 	*/
-	public virtual WaveObject addFields(Map<String, Object> p_fieldValues) {
+	public WaveObject addFields(Map<String, Object> p_fieldValues) {
 		for (String v_fieldName : p_fieldValues.keySet()) {
 			record.put(v_fieldName, p_fieldValues.get(v_fieldName));
 		}
@@ -167,8 +185,8 @@ public virtual class WaveObject {
 	*
 	*	@return WaveObject is a current class.
 	*/
-	public WaveObject getRecord() {
-		return this;
+	public sObject getSObjectRecord() {
+		return this.record;
 	}
 	
 	/**
@@ -176,15 +194,77 @@ public virtual class WaveObject {
 	*
 	*	@return WaveObject is a current class.
 	*/
-	public virtual WaveObject insertRecord() {
+	public sObject insertSObjectRecord() {
 		//Try to insert record and return
 		try {
 			insert record;
-		} catch(System.DMLException ex) {
-			return new WaveObject(objectName);
+		} catch(System.Exception ex) {
+			throw new UtilsException('Can not create ' + record.getSObjectType().getDescribe().getName() + 
+					'. The error message : ' + ex.getMessage());
 		}
 		
-		return this;
+		return this.record;
+	}
+	
+	/**
+	*	@description Get a parent record of creating sObject.
+	*
+	*	@param p_relationship is name of relationship of parent object.
+	*	@return sObject is parent object from current object;
+	*/
+	public sObject getParentSObject(String p_relationship) {
+		String v_objectName = record.getSObjectType().getDescribe().getName();
+		
+		//
+		return getsObject(v_objectName, p_relationship);
+	}
+	
+	/**
+	*	@description Get a parent record of object by input id value.
+	*
+	*	@param p_objectId is parent object id;
+	*	@param p_relationship is name of relationship of parent object.
+	*	@return sObject is parent object from current object;
+	*/
+	public sObject getParentSObject(Id p_objectId, String p_relationship) {
+		//
+		if (sObjectMap.containsKey(p_objectId)) {
+			sObject v_sObject = sObjectMap.get(p_objectId);
+			String v_objectName = v_sObject.getSObjectType().getDescribe().getName();
+			
+			//
+			return getsObject(v_objectName, p_relationship);
+		}
+		
+		return null;
+	}
+	
+	/**
+	*	@description Get sObject parent record by relationship value.
+	*
+	*	@param p_objectName is name of object that parent record we will return.
+	*	@param p_relationship is name of relationship for getting parent record.
+	*	@return sObject is parent record.
+	*/
+	private sObject getsObject(String p_objectName, String p_relationship) {
+		if (globalSObjectsMap.containsKey(p_objectName)) {
+			Map <String, Schema.SObjectField> v_fieldMap = globalSObjectsMap.get(p_objectName).
+					getDescribe().fields.getMap();
+			
+			//
+			Schema.SObjectField v_field = v_fieldMap.get(p_relationship);
+			if (v_field != null && ! v_field.getDescribe().getReferenceTo().isEmpty()) {
+				String v_parentId = String.valueOf(record.get(v_field.getDescribe().getName()));
+				return sObjectMap.get(v_parentId);
+			} else if (v_field == null) {
+				throw new UtilsException(p_relationship + ' field is not exists for ' + 
+						p_objectName + ' object.');
+			} else if (v_field.getDescribe().getReferenceTo().isEmpty()) {
+				throw new UtilsException(p_relationship + ' field is not lookup field type.');
+			}
+		}
+		
+		return null;
 	}
 	
 	public class UtilsException extends Exception {
